[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
miette = { version = "3.3.0", features = ["fancy"] }
pest = "2.1.3"
pest_derive = "2.1.0"
thiserror = "1.0.30"
