[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
miette = { version = "3.3.0", features = ["fancy"] }
pest = { version = "2.1.3", features = ["pretty-print"] }
pest_derive = "2.1.0"
thiserror = "1.0.30"
quick-quantum-sim = { git = "https://github.com/swernli/quick-quantum-sim" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
